# eink-dashboard

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
display/: __init__.py  epd_driver.py  layout.py
fetchers/: __init__.py  calendar.py  citibike.py  subway.py  weather.py
renderers/: __init__.py  base.py  calendar.py  citibike.py  subway.py  weather.py
scripts/: setup.sh
tests/: mock_display.py  test_fetchers.py
